library added and working - no sass.config.js to silence deprecation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+  /* Import bootstrap-italia SCSS*/
+  @import '../node_modules/bootstrap-italia/src/scss/bootstrap-italia.scss';
+  
